default img, stop shuffle on mobile, mobile nav css

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -89,7 +89,7 @@
         top: 0;
         left: 0;
         font-size: 2em;
-        z-index: 6;
+        z-index: 4;
         padding: .4em .5em;
         .vr-icon {
             opacity: .6;
@@ -209,7 +209,7 @@
             text-align: center;
             div {
                 margin: 2em auto;
-                padding: 0 2em;
+                padding: 0 2.5em;
                 max-width: 40em;
                 opacity: .7;
                 position: relative;
@@ -248,9 +248,9 @@
                 text-align: center;
                 transition: $transition-short;
                 position: relative;
-                width: 30em;
+                width: 25em;
                 height: 15em;
-                margin: 1em;
+                margin: .5em;
                 border-top: 1px solid rgba(255, 255, 255, 0.3);
                 border-right: 1px solid rgba(255, 255, 255, 0.3);
                 border-left: 1px solid rgba(255, 255, 255, 0.3);
@@ -386,7 +386,8 @@
 
 .page-wrap {
     transition: $transition-short;
-    &.page-wrap-disable {
+    &.page-wrap-disable .content,
+    &.page-wrap-disable .bg-img {
         filter: blur(3px);
     }
     &.loading .bg-overlay {
