--- a/assets/css/_media.scss
+++ b/assets/css/_media.scss
@@ -15,8 +15,8 @@
         font-size: .7em !important;
     }
     .nav-menu-item {
-        width: 20em !important;
-        height: 11em !important;
+        width: 18em !important;
+        height: 10em !important;
     }
     .email-btn,
     .shuffle-bg-btn {
